--- a/Modeling Canvas/MainWindow.xaml
+++ b/Modeling Canvas/MainWindow.xaml
@@ -11,9 +11,10 @@
             <ColumnDefinition Width="169*"/>
         </Grid.ColumnDefinitions>
 
-        <local:CustomCanvas x:Name="MyCanvas" Background="White" UnitSize="50" >
+        <local:CustomCanvas x:Name="MyCanvas" Background="White" UnitSize="50" Panel.ZIndex="0" Grid.Column="0">
         </local:CustomCanvas>
-        <Grid Grid.Column="1">
+
+        <Grid Grid.Column="1" Panel.ZIndex="1" Background="White">
             <Grid.RowDefinitions>
                 <RowDefinition Height="55*"/>
                 <RowDefinition Height="144*"/>
