--- a/Modeling Canvas/MainWindow.xaml
+++ b/Modeling Canvas/MainWindow.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="Modeling_Canvas.MainWindow"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -17,12 +18,82 @@
 
         <Grid Grid.Column="1" Panel.ZIndex="1" Background="White">
             <Grid.RowDefinitions>
-                <RowDefinition Height="23*"/>
-                <RowDefinition Height="59*"/>
-                <RowDefinition Height="246*"/>
+                <RowDefinition Height="55*"/>
+                <RowDefinition Height="34*"/>
+                <RowDefinition Height="239*"/>
             </Grid.RowDefinitions>
-            <Label x:Name="CurrentElementLabel" Content="Label" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" Height="157" Grid.Row="1"/>
-            <StackPanel x:Name="ControlStack" Grid.Row="2"/>
+            <Label x:Name="CurrentElementLabel" Content="Label" HorizontalAlignment="Center" Width="170" Margin="0,10,0,0" Grid.Row="1"/>
+            <StackPanel x:Name="ControlStack" Grid.Row="2" Margin="0,33,0,0"/>
+            <TabControl x:Name="DrawModeControlTab">
+                <TabItem Header="Normal">
+                    <Grid Background="#FFE5E5E5"/>
+                </TabItem>
+                <TabItem Header="Affine">
+                    <Grid Background="#FFE5E5E5">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="102*"/>
+                                <RowDefinition Height="35*"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="134*"/>
+                                <ColumnDefinition Width="135*"/>
+                            </Grid.ColumnDefinitions>
+                            <Label Content="Xx" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                            <Label Content="Yx" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center"/>
+                            <Label Content="0x" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top"/>
+                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="38,15,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="86"/>
+                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="38,0,0,0" TextWrapping="Wrap"  VerticalAlignment="Center" Width="86"/>
+                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="38,69,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="86"/>
+
+                            <Label Content="Xy" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+                            <Label Content="Yy" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Grid.Column="1"/>
+                            <Label Content="0y" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top" Grid.Column="1" RenderTransformOrigin="0.53,0.363"/>
+                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="39,15,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="86" Grid.Column="1"/>
+                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="39,0,0,0" TextWrapping="Wrap"  VerticalAlignment="Center" Width="86" Grid.Column="1"/>
+                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="39,69,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="86" Grid.Column="1"/>
+
+                            <Button Content="Apply" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="9,0,0,0" Grid.Row="1" VerticalAlignment="Center" Width="250"/>
+                        </Grid>
+                    </Grid>
+                </TabItem>
+                <TabItem Header="Projective" Margin="-2,-2,-2,0">
+                    <Grid Background="#FFE5E5E5">
+                        <Grid RenderTransformOrigin="0.468,0.494">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="102*"/>
+                                <RowDefinition Height="35*"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="104*"/>
+                                <ColumnDefinition Width="104*"/>
+                                <ColumnDefinition Width="104*"/>
+                            </Grid.ColumnDefinitions>
+                            <Label Content="Xx" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="26" Width="23"/>
+                            <Label Content="Yx" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Height="26" Width="22"/>
+                            <Label Content="0x" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top" Height="26" Width="22"/>
+                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="38,15,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="42" Height="18"/>
+                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="38,0,0,0" TextWrapping="Wrap"  VerticalAlignment="Center" Width="42" Height="18"/>
+                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="38,69,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="42" Height="18"/>
+
+                            <Label Content="Xy" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="27"/>
+                            <Label Content="Yy" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="26" Margin="0,37,0,0"/>
+                            <Label Content="0y" HorizontalAlignment="Left" Margin="0,64,0,0" VerticalAlignment="Top" Grid.Column="1" RenderTransformOrigin="0.53,0.363" Height="26" Width="26"/>
+                            <Button Content="Apply" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="9,0,0,0" Grid.Row="1" VerticalAlignment="Center" Width="250" Height="20"/>
+                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="39,15,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="40" Grid.Column="1" Height="18"/>
+                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" TextWrapping="Wrap"  VerticalAlignment="Center" Width="40" Grid.Column="1" Height="18" Margin="39,0,0,0"/>
+                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="39,69,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="40" Grid.Column="1" Height="18"/>
+
+                            <Label Content="wX" HorizontalAlignment="Left" Margin="1,10,0,0" VerticalAlignment="Top" Grid.Column="2" Height="26" Width="28"/>
+                            <Label Content="wY" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="2" Height="26" Width="27" Margin="1,37,0,0"/>
+                            <Label Content="w0" HorizontalAlignment="Left" Margin="1,64,0,0" VerticalAlignment="Top" Grid.Column="2" RenderTransformOrigin="0.53,0.363" Height="26" Width="27"/>
+                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="40,15,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="40" Grid.Column="2" Height="18"/>
+                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" TextWrapping="Wrap"  VerticalAlignment="Center" Width="40" Grid.Column="2" Height="18" Margin="40,0,0,0"/>
+                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="40,69,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="40" Grid.Column="2" Height="18"/>
+                        </Grid>
+                    </Grid>
+                </TabItem>
+            </TabControl>
         </Grid>
     </Grid>
 </Window>
