--- a/Modeling Canvas/MainWindow.xaml
+++ b/Modeling Canvas/MainWindow.xaml
@@ -3,9 +3,12 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:Modeling_Canvas.UIELements"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:Modeling_Canvas.UIELements" xmlns:local1="clr-namespace:Modeling_Canvas"
         mc:Ignorable="d"
         Title="MainWindow" Height="1000" Width="1300">
+    <Window.Resources>
+        <local1:FloatConverter x:Key="FloatConverter"/>
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="631*"/>
@@ -24,7 +27,16 @@
             </Grid.RowDefinitions>
             <Label x:Name="CurrentElementLabel" Content="Label" HorizontalAlignment="Center" Width="170" Margin="0,10,0,0" Grid.Row="1"/>
             <StackPanel x:Name="ControlStack" Grid.Row="2" Margin="0,33,0,0"/>
-            <TabControl x:Name="DrawModeControlTab">
+            <TabControl x:Name="DrawModeControlTab" Focusable="False">
+                <TabControl.Resources>
+                    <Style TargetType="TextBox">
+                        <Setter Property="MinWidth" Value="42"/>
+                        <Setter Property="MaxWidth" Value="42"/>
+                        <Setter Property="MinHeight" Value="18"/>
+                        <Setter Property="MaxHeight" Value="18"/>
+                    </Style>
+                </TabControl.Resources>
+
                 <TabItem Header="Normal">
                     <Grid Background="#FFE5E5E5"/>
                 </TabItem>
@@ -40,20 +52,31 @@
                                 <ColumnDefinition Width="135*"/>
                             </Grid.ColumnDefinitions>
                             <Label Content="Xx" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ElementName=MyCanvas, Path=AffineParams.Xx, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                     HorizontalAlignment="Left" Margin="38,15,0,0" VerticalAlignment="Top" Width="86"/>
+
                             <Label Content="Yx" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center"/>
+                            <TextBox Text="{Binding ElementName=MyCanvas, Path=AffineParams.Yx, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                     HorizontalAlignment="Left" Margin="38,0,0,0" VerticalAlignment="Center" Width="86"/>
+
                             <Label Content="0x" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top"/>
-                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="38,15,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="86"/>
-                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="38,0,0,0" TextWrapping="Wrap"  VerticalAlignment="Center" Width="86"/>
-                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="38,69,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="86"/>
+                            <TextBox Text="{Binding ElementName=MyCanvas, Path=AffineParams.Ox, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                     HorizontalAlignment="Left" Margin="38,69,0,0" VerticalAlignment="Top" Width="86"/>
 
                             <Label Content="Xy" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-                            <Label Content="Yy" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Grid.Column="1"/>
-                            <Label Content="0y" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top" Grid.Column="1" RenderTransformOrigin="0.53,0.363"/>
-                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="39,15,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="86" Grid.Column="1"/>
-                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="39,0,0,0" TextWrapping="Wrap"  VerticalAlignment="Center" Width="86" Grid.Column="1"/>
-                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="39,69,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="86" Grid.Column="1"/>
+                            <TextBox Text="{Binding ElementName=MyCanvas, Path=AffineParams.Xy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                     HorizontalAlignment="Left" Margin="39,15,0,0" VerticalAlignment="Top" Width="86" Grid.Column="1"/>
 
-                            <Button Content="Apply" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="9,0,0,0" Grid.Row="1" VerticalAlignment="Center" Width="250"/>
+                            <Label Content="Yy" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Grid.Column="1"/>
+                            <TextBox Text="{Binding ElementName=MyCanvas, Path=AffineParams.Yy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                     HorizontalAlignment="Left" Margin="39,0,0,0" VerticalAlignment="Center" Width="86" Grid.Column="1"/>
+
+                            <Label Content="0y" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+                            <TextBox Text="{Binding ElementName=MyCanvas, Path=AffineParams.Oy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                     HorizontalAlignment="Left" Margin="39,69,0,0" VerticalAlignment="Top" Width="86" Grid.Column="1"/>
+
+                            <Button Focusable="False" Content="Apply" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="9,0,0,0" Grid.Row="1" VerticalAlignment="Center" Width="250" 
+        Command="{Binding ElementName=MyCanvas, Path=InvalidateCanvasCommand}"/>
                         </Grid>
                     </Grid>
                 </TabItem>
@@ -69,27 +92,47 @@
                                 <ColumnDefinition Width="104*"/>
                                 <ColumnDefinition Width="104*"/>
                             </Grid.ColumnDefinitions>
-                            <Label Content="Xx" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="26" Width="23"/>
-                            <Label Content="Yx" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Height="26" Width="22"/>
-                            <Label Content="0x" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top" Height="26" Width="22"/>
-                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="38,15,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="42" Height="18"/>
-                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="38,0,0,0" TextWrapping="Wrap"  VerticalAlignment="Center" Width="42" Height="18"/>
-                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="38,69,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="42" Height="18"/>
 
-                            <Label Content="Xy" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="27"/>
-                            <Label Content="Yy" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="26" Margin="0,37,0,0"/>
-                            <Label Content="0y" HorizontalAlignment="Left" Margin="0,64,0,0" VerticalAlignment="Top" Grid.Column="1" RenderTransformOrigin="0.53,0.363" Height="26" Width="26"/>
-                            <Button Content="Apply" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="9,0,0,0" Grid.Row="1" VerticalAlignment="Center" Width="250" Height="20"/>
-                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="39,15,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="40" Grid.Column="1" Height="18"/>
-                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" TextWrapping="Wrap"  VerticalAlignment="Center" Width="40" Grid.Column="1" Height="18" Margin="39,0,0,0"/>
-                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="39,69,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="40" Grid.Column="1" Height="18"/>
+                            <!-- Bind ProjectiveModel Properties -->
+                            <Label Content="Xx" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.Xx, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                     HorizontalAlignment="Left" Margin="40,13,0,69" Width="50" Grid.ColumnSpan="2"/>
 
-                            <Label Content="wX" HorizontalAlignment="Left" Margin="1,10,0,0" VerticalAlignment="Top" Grid.Column="2" Height="26" Width="28"/>
-                            <Label Content="wY" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="2" Height="26" Width="27" Margin="1,37,0,0"/>
-                            <Label Content="w0" HorizontalAlignment="Left" Margin="1,64,0,0" VerticalAlignment="Top" Grid.Column="2" RenderTransformOrigin="0.53,0.363" Height="26" Width="27"/>
-                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="40,15,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="40" Grid.Column="2" Height="18"/>
-                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" TextWrapping="Wrap"  VerticalAlignment="Center" Width="40" Grid.Column="2" Height="18" Margin="40,0,0,0"/>
-                            <TextBox PreviewTextInput="NumberValidationTextBox" HorizontalAlignment="Left" Margin="40,69,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="40" Grid.Column="2" Height="18"/>
+                            <Label Content="Yx" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.Yx, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                     HorizontalAlignment="Left" Margin="40,38,0,44" Width="50" Grid.ColumnSpan="2"/>
+
+                            <Label Content="Ox" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.Ox, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                     HorizontalAlignment="Left" Margin="40,63,0,19" Width="50" Grid.ColumnSpan="2"/>
+
+                            <Label Content="Xy" Grid.Column="1" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.Xy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                     HorizontalAlignment="Left" Margin="39,13,0,69" Grid.Column="1" Width="50"/>
+
+                            <Label Content="Yy" Grid.Column="1" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.Yy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                     HorizontalAlignment="Left" Margin="39,38,0,44" Grid.Column="1" Width="50"/>
+
+                            <Label Content="Oy" Grid.Column="1" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.Oy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                     HorizontalAlignment="Left" Margin="39,63,0,19" Grid.Column="1" Width="50"/>
+
+                            <Label Content="wX" Grid.Column="2" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.wX, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                     HorizontalAlignment="Left" Margin="37,13,0,69" Grid.Column="2" Width="50"/>
+
+                            <Label Content="wY" Grid.Column="2" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.wY, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                     HorizontalAlignment="Left" Margin="37,38,0,44" Grid.Column="2" Width="50"/>
+
+                            <Label Content="wO" Grid.Column="2" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.wO, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                     HorizontalAlignment="Left" Margin="37,63,0,19" Grid.Column="2" Width="50"/>
+
+                            <Button Focusable="False"  Content="Apply" Grid.Row="1" Grid.ColumnSpan="3" 
+                    HorizontalAlignment="Center" Command="{Binding ElementName=MyCanvas, Path=InvalidateCanvasCommand}" 
+                    VerticalAlignment="Center" Width="100"/>
                         </Grid>
                     </Grid>
                 </TabItem>
