--- a/Modeling Canvas/MainWindow.xaml
+++ b/Modeling Canvas/MainWindow.xaml
@@ -19,6 +19,16 @@
         </Grid.ColumnDefinitions>
 
         <local:CustomCanvas x:Name="MainCanvas" Focusable="True" ClipToBounds="True" Background="White" Panel.ZIndex="0" Grid.Column="0">
+            <Canvas.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleY="-1"/>
+                    <TranslateTransform>
+                        <TranslateTransform.Y>
+                            <Binding Path="ActualHeight" RelativeSource="{RelativeSource AncestorType=Canvas}"/>
+                        </TranslateTransform.Y>
+                    </TranslateTransform>
+                </TransformGroup>
+            </Canvas.RenderTransform>
         </local:CustomCanvas>
         <Label x:Name="MousePositionLabel" Content="X: Y:&#xD;&#xA;Pixels: " HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="109" Height="59" Panel.ZIndex="5" HorizontalContentAlignment="Right" Margin="0,0,5,10"/>
 
