--- a/Modeling Canvas/MainWindow.xaml
+++ b/Modeling Canvas/MainWindow.xaml
@@ -156,6 +156,62 @@
                         </Grid>
                     </Grid>
                 </TabItem>
+                <TabItem x:Name="ProjectiveV2Tab" Header="Projective 2" Margin="-2,-2,-2,0">
+                    <Grid Background="#FFE5E5E5">
+                        <Grid RenderTransformOrigin="0.468,0.494">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="102*"/>
+                                <RowDefinition Height="35*"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="104*"/>
+                                <ColumnDefinition Width="104*"/>
+                                <ColumnDefinition Width="104*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <!-- Bind ProjectiveModel Properties -->
+                            <Label Content="Xx" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ProjectiveParams.Xx, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                                HorizontalAlignment="Left" Margin="40,13,0,69" Width="50" Grid.ColumnSpan="2"/>
+
+                            <Label Content="Yx" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ProjectiveParams.Yx, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                                HorizontalAlignment="Left" Margin="40,38,0,44" Width="50" Grid.ColumnSpan="2"/>
+
+                            <Label Content="Ox" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ProjectiveParams.Ox, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                                HorizontalAlignment="Left" Margin="40,63,0,19" Width="50" Grid.ColumnSpan="2"/>
+
+                            <Label Content="Xy" Grid.Column="1" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ProjectiveParams.Xy, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                                HorizontalAlignment="Left" Margin="39,13,0,69" Grid.Column="1" Width="50"/>
+
+                            <Label Content="Yy" Grid.Column="1" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ProjectiveParams.Yy, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                                HorizontalAlignment="Left" Margin="39,38,0,44" Grid.Column="1" Width="50"/>
+
+                            <Label Content="Oy" Grid.Column="1" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ProjectiveParams.Oy, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                                HorizontalAlignment="Left" Margin="39,63,0,19" Grid.Column="1" Width="50"/>
+
+                            <Label Content="wX" Grid.Column="2" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ProjectiveParams.wX, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                                HorizontalAlignment="Left" Margin="37,13,0,69" Grid.Column="2" Width="50"/>
+
+                            <Label Content="wY" Grid.Column="2" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ProjectiveParams.wY, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                                HorizontalAlignment="Left" Margin="37,38,0,44" Grid.Column="2" Width="50"/>
+
+                            <Label Content="wO" Grid.Column="2" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding ProjectiveParams.wO, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                                HorizontalAlignment="Left" Margin="37,63,0,19" Grid.Column="2" Width="50"/>
+
+                            <Button Content="Apply" Grid.Row="1" Grid.Column="1"
+                                HorizontalAlignment="Center" Command="{Binding InvalidateCanvasCommand, ElementName=MainCanvas}" 
+                                VerticalAlignment="Center" Width="90"/>
+                        </Grid>
+                    </Grid>
+                </TabItem>
             </TabControl>
         </Grid>
     </Grid>
